--- a/package.json
+++ b/package.json
@@ -6,10 +6,17 @@
     "type": "git",
     "url": "git+https://github.com/Min9ithub/wetube.git"
   },
+  "engines": {
+    "node": "16.16.0",
+    "npm": "8.11.0"
+  },
   "scripts": {
-    "build:server": "babel src/ -d build",
+    "start": "node build/init.js",
+    "build": "npm run build:server && npm run build:assets",
+    "build:server": "babel src -d build",
+    "build:assets": "webpack --mode=production",
     "dev:server": "nodemon",
-    "dev:assets": "webpack"
+    "dev:assets": "webpack --mode=development -w"
   },
   "author": "Minki",
   "license": "MIT",
